src/App.css
/* General */
.text-light {
  font-weight: 300;
}
.text-bold {
  font-weight: 700;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

/* Station Board */
.station-board {
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.station-board h1 {
  margin-block: -0.25em;
}

.station-board h2 {
  margin-block: -0.25em;
}

.station-board p {
  margin-block: -0.25em;
}

.station-board-arrival-panels-stack {
  display: flex;
  flex-direction: column;
  gap: 26px;
}

.station-board-arrival-panels-list {
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  gap: 40px;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

/* Arrival Panel */

.arrival-panel-outer {
  position: relative;

  background-color: #424242;
  border-radius: 8px;
  padding: 8px;

  display: flex;
  flex-direction: row;
  justify-content: end;
  align-items: center;
  gap: 20px;
}

.train-logo-container {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: fit-content;
}

.arrival-panel-train-logo {
  height: 90px;
}

.arrival-panel-destination {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 3px;
}

.arrival-panel-destination p {
  font-size: 1.6em;
}

.arrival-panel-arrival-time {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-right: 6px;
  min-width: 50px;
}

.arrival-panel-arrival-time p {
  font-size: 1.15em;
}

.arrival-panel-backing {
  /* background-color: red; */
  background-color: #242424;
}

.arrival-panel-backing-fade {
  /* background-color: blue; */
  background: linear-gradient(to right, #242424, rgba(36, 36, 36, 0));
}

.arrival-panel-darken-below {
  /* background-color: green; */
  background-color: rgba(36, 36, 36, 0.3)
}

.arrival-panel-extra-darken-below {
  /* background-color: green; */
  background-color: rgba(36, 36, 36, 0.4)
}

.arrival-panel-train-logo.arrival-panel-compact {
  height: 60px;
  margin-right: -10px;
}

h1.arrival-panel-compact {
  font-size: 2.8em;
}

/* Arrival Panel List */
.arrival-panel-list-wrapper {
  display: flex;
  flex-direction: column;
  gap: 6px;
}

.arrival-panel-list-header {
  display: flex;
  flex-direction: row;
  gap: 7px;
}

.arrival-panel-list-header img {
  height: 2.2em;
}

.arrival-panel-list-container {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

/* Warning */
.warning-overlay {
  position: absolute;
  bottom: -2px;
  right: -2px;
}

.warning-overlay-compact {
  position: absolute;
  bottom: -2px;
  right: -12px;
}

.warning-overlay svg {
  width: 2em;
  height: auto;
}

.warning-overlay-compact svg {
  width: 1.5em;
  height: auto;
}

/* Clock */
.clock {
  font-size: 2.2em;
}

/* Station Selector */
.station-selector-label-container {
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
}

.station-selector-label-container span {
  margin-right: 3px;
}

.station-selector-label-container img {
  height: 28px;
  margin-top: 2px;
}

/* Mobile */
@media (max-width: 800px) {
  #root {
    padding: 20px;
  }

  h1 {
    font-size: 1.5em;
  }

  h2 {
    font-size: 1.25em;
  }

  .station-board {
    gap: 10px;
  }

  .arrival-panel-list-wrapper {
    gap: 4px;
  }

  .station-board-arrival-panels-stack {
    gap: 12px;
  }
  
  .station-board-arrival-panels-list {
    margin-top: 10px;
    gap: 25px;
  }

  .arrival-panel-list-header {
    gap: 3px;
  }
  
  .arrival-panel-list-header img {
    height: 1.1em;
    margin-top: -0.05em;
  }

  .arrival-panel-outer {
    gap: 8px;
    height: 44px;
  }

  .arrival-panel-destination p {
    font-size: 0.8em;
  }

  .arrival-panel-arrival-time {
    margin-right: 2px;
    gap: 4px;
    min-width: 18px;
  }
  
  .arrival-panel-arrival-time p {
    font-size: 0.5em;
    margin-top: -0.5em;
  }

  .arrival-panel-train-logo {
    height: 35px;
  }

  .arrival-panel-train-logo.arrival-panel-compact {
    height: 24px;
    margin-right: -3px;
  }
  
  h1.arrival-panel-compact {
    font-size: 1em;
  }

  .clock {
    display: none;
  }

  .station-selector-label-container {
    gap: 3px;
  }

  .station-selector-label-container span {
    margin-right: 2px;
  }
  
  .station-selector-label-container img {
    height: 20px;
    margin-top: 0px;
  }
}

